# 12_taxobservatory_datavize

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deployment.md  docker-compose.yml  pyproject.toml  requirements.txt
.d4g-tools/deploy/pull/: pull.sh  pull_cron.sh  readme.md
.d4g-tools/deploy/taipy/: uwsgi.ini
.deploy/: deploy.sh  known_hosts
.deploy/nginx/sites-available/: taxplorer
.deploy/uwsgi/: taxplorer.uwsgi.service
.github/workflows/: cicd_dev.yml  pre-commit.yaml
app/: algo.py  config.py  main.py  page.py  viz.py  viz_library.py
app/.taipy/version/: b010bd91-60b9-49d5-98b0-5ccc388c3a2c.json
app/assets/css/: style.css
app/config/: config.py
app/css/: style.css  viz.css
app/data/: EUTO_Public_CbCR_Database_2021.xlsx  data.py
app/pages/: root.md  root.py
app/pages/_header/: _header.md  _header.py
app/pages/company/: company.md  company.py
app/pages/contact/: contact.md  contact.py
app/pages/country/: country.py
app/pages/download/: download.md  download.py
app/pages/home/: home.md  home.py
app/pages/keystories/: keystories.md  keystories.py
app/pages/methodology/: methodology.md  methodology.py
app/pages/sector/: sector.py
app/pages/viz/: viz.py
